fix(progress): made bar visible in forced colors mode (#7850)

--- a/src/patternfly/components/Progress/progress.scss
+++ b/src/patternfly/components/Progress/progress.scss
@@ -15,6 +15,8 @@
   --#{$progress}__status-icon--Color: var(--pf-t--global--icon--color--regular);
   --#{$progress}__indicator--Height: var(--#{$progress}__bar--Height);
   --#{$progress}__indicator--BackgroundColor: var(--pf-t--global--color--brand--default);
+  --#{$progress}__indicator--BorderWidth: var(--pf-t--global--border--width--high-contrast--extra-strong);
+  --#{$progress}__indicator--BorderColor: transparent;
   --#{$progress}__helper-text--MarginBlockStart: calc(var(--pf-t--global--spacer--sm) - var(--#{$progress}--GridGap));
 
   // Modifier variables
@@ -220,6 +222,15 @@
   position: absolute; // position absolute to bring above the semi-transparent bar overlay
   height: var(--#{$progress}__indicator--Height);
   background-color: var(--#{$progress}__indicator--BackgroundColor);
+
+  // for forced colors mode
+  &::before {
+    position: absolute;
+    inset: 0;
+    content: "";
+    border: var(--#{$progress}__indicator--BorderWidth) solid var(--#{$progress}__indicator--BorderColor);
+    border-radius: var(--#{$progress}__bar--BorderRadius);
+  }
 }
 
 .#{$progress}__helper-text {
